--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -42,19 +42,19 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="thumbnail">
-                    <a href="http://www.rakuten-bank.co.jp/smartphone/"><img src="../assets/images/rkbk.png" alt=""></a>
+                    <a href="http://www.rakuten-bank.co.jp/smartphone/"><img src="../assets/images/portfoio/rkbk.png" alt=""></a>
                     <p>楽天銀行スマートフォンサイト</p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="thumbnail">
-                    <a href="http://qvc.jp/smp/cont/smp/top/Main"><img src="../assets/images/qvc.png" alt=""></a>
+                    <a href="http://qvc.jp/smp/cont/smp/top/Main"><img src="../assets/images/portfoio/qvc.png" alt=""></a>
                     <p>QVCスマートフォンサイト</p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="thumbnail">
-                    <a href="http://www.minit.co.jp/"><img src="../assets/images/minit.jpg" alt=""></a>
+                    <a href="http://www.minit.co.jp/"><img src="../assets/images/portfoio/minit.jpg" alt=""></a>
                     <p>ミスターミニット</p>
                 </div>
             </div>
@@ -63,19 +63,19 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="thumbnail">
-                    <a href="http://www.kinenhin-a.com/"><img src="../assets/images/kinen.png" alt=""></a>
+                    <a href="http://www.kinenhin-a.com/"><img src="../assets/images/portfoio/kinen.png" alt=""></a>
                     <p>記念品コンシェル</p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="thumbnail">
-                    <a href="http://www.ot-c.jp/"><img src="../assets/images/t.jpg" alt=""></a>
+                    <a href="http://www.ot-c.jp/"><img src="../assets/images/portfoio/t.jpg" alt=""></a>
                     <p>Tシャツクラブ</p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="thumbnail">
-                    <a href="http://www.rvo-eye.com/"><img src="../assets/images/rvo.jpg" alt=""></a>
+                    <a href="http://www.rvo-eye.com/"><img src="../assets/images/portfoio/rvo.jpg" alt=""></a>
                     <p>ノバルティスファーマ　網膜静脈閉塞症ドットコム</p>
                 </div>
             </div>
@@ -84,7 +84,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="thumbnail">
-                    <a href="http://www.mcnv-eye.com/"><img src="../assets/images/mcnv.jpg" alt=""></a>
+                    <a href="http://www.mcnv-eye.com/"><img src="../assets/images/portfoio/mcnv.jpg" alt=""></a>
                     <p>ノバルティスファーマ　強度近視ドットコム</p>
                 </div>
             </div>
