--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -63,7 +63,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="thumbnail">
-                    <a href="http://www.kinenhin-a.com/"><img src="../assets/images/portfoio/kinen.png" alt=""></a>
+                    <a href="http://www.kinenhin-a.com/"><img src="../assets/images/portfoio/kinen.jpg" alt=""></a>
                     <p>記念品コンシェル</p>
                 </div>
             </div>
