--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -43,19 +43,25 @@
             <div class="col-md-4">
                 <div class="thumbnail">
                     <a href="http://www.rakuten-bank.co.jp/smartphone/"><img src="../assets/images/portfoio/rkbk.png" alt=""></a>
-                    <p>楽天銀行スマートフォンサイト</p>
+                    <div class="caption">
+                        <h4>楽天銀行スマートフォンサイト</h4>
+                    </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="thumbnail">
                     <a href="http://qvc.jp/smp/cont/smp/top/Main"><img src="../assets/images/portfoio/qvc.png" alt=""></a>
-                    <p>QVCスマートフォンサイト</p>
+                    <div class="caption">
+                        <h4>QVCスマートフォンサイト</h4>
+                    </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="thumbnail">
                     <a href="http://www.minit.co.jp/"><img src="../assets/images/portfoio/minit.jpg" alt=""></a>
-                    <p>ミスターミニット</p>
+                    <div class="caption">
+                        <h4>ミスターミニット</h4>
+                    </div>
                 </div>
             </div>
         </div>
@@ -64,19 +70,25 @@
             <div class="col-md-4">
                 <div class="thumbnail">
                     <a href="http://www.kinenhin-a.com/"><img src="../assets/images/portfoio/kinen.jpg" alt=""></a>
-                    <p>記念品コンシェル</p>
+                    <div class="caption">
+                        <h4>記念品コンシェル</h4>
+                    </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="thumbnail">
                     <a href="http://www.ot-c.jp/"><img src="../assets/images/portfoio/t.jpg" alt=""></a>
-                    <p>Tシャツクラブ</p>
+                    <div class="caption">
+                        <h4>Tシャツクラブ</h4>
+                    </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="thumbnail">
                     <a href="http://www.rvo-eye.com/"><img src="../assets/images/portfoio/rvo.jpg" alt=""></a>
-                    <p>ノバルティスファーマ　網膜静脈閉塞症ドットコム</p>
+                    <div class="caption">
+                        <h4>ノバルティスファーマ　網膜静脈閉塞症ドットコム</h4>
+                    </div>
                 </div>
             </div>
         </div>
@@ -85,7 +97,9 @@
             <div class="col-md-4">
                 <div class="thumbnail">
                     <a href="http://www.mcnv-eye.com/"><img src="../assets/images/portfoio/mcnv.jpg" alt=""></a>
-                    <p>ノバルティスファーマ　強度近視ドットコム</p>
+                    <div class="caption">
+                        <h4>ノバルティスファーマ　強度近視ドットコム</h4>
+                    </div>
                 </div>
             </div>
         </div>
