--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -104,6 +104,9 @@
         </div>
     </div>
 
+    <p>その他、ここには表示できないですが、WebサービスやiPhoneアプリなどの画面のフロント周りの実装を行ってきました。<br>
+        現在は、大手ショッピングサイトのECサイト（レスポンシブ）を作成中です（9月1日公開予定）</p>
+
     </div>
 
 
