--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -43,23 +43,40 @@
                 <div class="thumbnail">
                     <a href="http://www.rakuten-bank.co.jp/smartphone/"><img src="../assets/images/portfoio/rkbk.png" alt=""></a>
                     <div class="caption">
-                        <h5>楽天銀行スマートフォンサイト</h5>
+                        <h3>楽天銀行スマートフォンサイト</h3>
+                        <dl>
+                            <dt>【担当】</dt>
+                            <dd>テンプレート設計</dd>
+                            <dd>CSS設計</dd>
+                            <dd>Javascript</dd>
+                        </dl>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="thumbnail">
-                    <a href="http://qvc.jp/smp/cont/smp/top/Main"><img src="../assets/images/portfoio/qvc.png" alt=""></a>
+                    <a href="http://www.eikoh-seminar.com/"><img src="../assets/images/portfoio/eikoh.jpg" alt=""></a>
                     <div class="caption">
-                        <h5>QVCスマートフォンサイト</h5>
+                        <h3>栄光ゼミナール</h3>
+                        <dl>
+                            <dt>【担当】</dt>
+                            <dd>テンプレート設計</dd>
+                            <dd>CSS設計</dd>
+                            <dd>CMS構築（MovableType)</dd>
+                        </dl>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="thumbnail">
-                    <a href="http://www.minit.co.jp/"><img src="../assets/images/portfoio/minit.jpg" alt=""></a>
+                    <a href="http://www.enherb.jp/news/141028.html."><img src="../assets/images/portfoio/enherb.png" alt=""></a>
                     <div class="caption">
-                        <h5>ミスターミニット</h5>
+                        <h3>まいにちハーブ（iPhone、Androidアプリ）</h3>
+                        <dl>
+                            <dt>【担当】</dt>
+                            <dd>テンプレート設計</dd>
+                            <dd>CSS設計</dd>
+                        </dl>
                     </div>
                 </div>
             </div>
@@ -68,9 +85,28 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="thumbnail">
+                    <a href="http://www.minit.co.jp/"><img src="../assets/images/portfoio/minit.jpg" alt=""></a>
+                    <div class="caption">
+                        <h3>ミスターミニット</h3>
+                        <dl>
+                            <dt>【担当】</dt>
+                            <dd>テンプレート設計</dd>
+                            <dd>CSS設計</dd>
+                            <dd>CMS構築（MovableType)</dd>
+                        </dl>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="thumbnail">
                     <a href="http://www.kinenhin-a.com/"><img src="../assets/images/portfoio/kinen.jpg" alt=""></a>
                     <div class="caption">
-                        <h5>記念品コンシェル</h5>
+                        <h3>記念品コンシェル</h3>
+                        <dl>
+                            <dt>【担当】</dt>
+                            <dd>テンプレート設計</dd>
+                            <dd>CSS設計</dd>
+                        </dl>
                     </div>
                 </div>
             </div>
@@ -78,7 +114,29 @@
                 <div class="thumbnail">
                     <a href="http://www.ot-c.jp/"><img src="../assets/images/portfoio/t.jpg" alt=""></a>
                     <div class="caption">
-                        <h5>Tシャツクラブ</h5>
+                        <h3>Tシャツクラブ</h3>
+                        <dl>
+                            <dt>【担当】</dt>
+                            <dd>テンプレート設計</dd>
+                            <dd>CSS設計</dd>
+                        </dl>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="row">
+            <div class="col-md-4">
+                <div class="thumbnail">
+                    <a href="http://qvc.jp/smp/cont/smp/top/Main"><img src="../assets/images/portfoio/qvc.png" alt=""></a>
+                    <div class="caption">
+                        <h3>QVCスマートフォンサイト</h3>
+                        <dl>
+                            <dt>【担当】</dt>
+                            <dd>テンプレート設計</dd>
+                            <dd>CSS設計</dd>
+                        </dl>
                     </div>
                 </div>
             </div>
@@ -86,18 +144,23 @@
                 <div class="thumbnail">
                     <a href="http://www.rvo-eye.com/"><img src="../assets/images/portfoio/rvo.jpg" alt=""></a>
                     <div class="caption">
-                        <h5>ノバルティスファーマ　網膜静脈閉塞症ドットコム</h5>
+                        <h3>ノバルティスファーマ　網膜静脈閉塞症ドットコム</h3>
+                        <dl>
+                            <dt>【担当】</dt>
+                            <dd>ページコーディング</dd>
+                        </dl>
                     </div>
                 </div>
             </div>
-        </div>
-
-        <div class="row">
             <div class="col-md-4">
                 <div class="thumbnail">
                     <a href="http://www.mcnv-eye.com/"><img src="../assets/images/portfoio/mcnv.jpg" alt=""></a>
                     <div class="caption">
-                        <h5>ノバルティスファーマ　強度近視ドットコム</h5>
+                        <h3>ノバルティスファーマ　強度近視ドットコム</h3>
+                        <dl>
+                            <dt>【担当】</dt>
+                            <dd>ページコーディング</dd>
+                        </dl>
                     </div>
                 </div>
             </div>
