--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -43,13 +43,13 @@
                 <div class="thumbnail">
                     <a href="http://www.rakuten-bank.co.jp/smartphone/"><img src="../assets/images/portfoio/rkbk.png" alt=""></a>
                     <div class="caption">
-                        <h3>楽天銀行スマートフォンサイト</h3>
-                        <dl>
-                            <dt>【担当】</dt>
-                            <dd>テンプレート設計</dd>
-                            <dd>CSS設計</dd>
-                            <dd>Javascript</dd>
-                        </dl>
+                        <h4>楽天銀行スマートフォンサイト</h4>
+                        <h5>【担当】</h5>
+                        <ul>
+                            <li>テンプレート設計</li>
+                            <li>CSS設計</li>
+                            <li><Javascript</li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -57,13 +57,13 @@
                 <div class="thumbnail">
                     <a href="http://www.eikoh-seminar.com/"><img src="../assets/images/portfoio/eikoh.jpg" alt=""></a>
                     <div class="caption">
-                        <h3>栄光ゼミナール</h3>
-                        <dl>
-                            <dt>【担当】</dt>
-                            <dd>テンプレート設計</dd>
-                            <dd>CSS設計</dd>
-                            <dd>CMS構築（MovableType)</dd>
-                        </dl>
+                        <h4>栄光ゼミナール</h4>
+                            <h5>【担当】</h5>
+                            <ul>
+                            <li>テンプレート設計</li>
+                            <li>CSS設計</li>
+                            <li>CMS構築（MovableType)</li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -71,12 +71,12 @@
                 <div class="thumbnail">
                     <a href="http://www.enherb.jp/news/141028.html."><img src="../assets/images/portfoio/enherb.png" alt=""></a>
                     <div class="caption">
-                        <h3>まいにちハーブ（iPhone、Androidアプリ）</h3>
-                        <dl>
-                            <dt>【担当】</dt>
-                            <dd>テンプレート設計</dd>
-                            <dd>CSS設計</dd>
-                        </dl>
+                        <h4>まいにちハーブ（iPhone、Androidアプリ）</h4>
+                            <h5>【担当】</h5>
+                            <ul>
+                            <li>テンプレート設計</li>
+                            <li>CSS設計</li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -87,13 +87,13 @@
                 <div class="thumbnail">
                     <a href="http://www.minit.co.jp/"><img src="../assets/images/portfoio/minit.jpg" alt=""></a>
                     <div class="caption">
-                        <h3>ミスターミニット</h3>
-                        <dl>
-                            <dt>【担当】</dt>
-                            <dd>テンプレート設計</dd>
-                            <dd>CSS設計</dd>
-                            <dd>CMS構築（MovableType)</dd>
-                        </dl>
+                        <h4>ミスターミニット</h4>
+                            <h5>【担当】</h5>
+                            <ul>
+                            <li>テンプレート設計</li>
+                            <li>CSS設計</li>
+                            <li>CMS構築（MovableType)</li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -101,12 +101,12 @@
                 <div class="thumbnail">
                     <a href="http://www.kinenhin-a.com/"><img src="../assets/images/portfoio/kinen.jpg" alt=""></a>
                     <div class="caption">
-                        <h3>記念品コンシェル</h3>
-                        <dl>
-                            <dt>【担当】</dt>
-                            <dd>テンプレート設計</dd>
-                            <dd>CSS設計</dd>
-                        </dl>
+                        <h4>記念品コンシェル</h4>
+                            <h5>【担当】</h5>
+                            <ul>
+                            <li>テンプレート設計</li>
+                            <li>CSS設計</li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -114,12 +114,12 @@
                 <div class="thumbnail">
                     <a href="http://www.ot-c.jp/"><img src="../assets/images/portfoio/t.jpg" alt=""></a>
                     <div class="caption">
-                        <h3>Tシャツクラブ</h3>
-                        <dl>
-                            <dt>【担当】</dt>
-                            <dd>テンプレート設計</dd>
-                            <dd>CSS設計</dd>
-                        </dl>
+                        <h4>Tシャツクラブ</h4>
+                            <h5>【担当】</h5>
+                            <ul>
+                            <li>テンプレート設計</li>
+                            <li>CSS設計</li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -131,12 +131,12 @@
                 <div class="thumbnail">
                     <a href="http://qvc.jp/smp/cont/smp/top/Main"><img src="../assets/images/portfoio/qvc.png" alt=""></a>
                     <div class="caption">
-                        <h3>QVCスマートフォンサイト</h3>
-                        <dl>
-                            <dt>【担当】</dt>
-                            <dd>テンプレート設計</dd>
-                            <dd>CSS設計</dd>
-                        </dl>
+                        <h4>QVCスマートフォンサイト</h4>
+                            <h5>【担当】</h5>
+<ul>
+                            <li>テンプレート設計</li>
+                            <li>CSS設計</li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -144,11 +144,11 @@
                 <div class="thumbnail">
                     <a href="http://www.rvo-eye.com/"><img src="../assets/images/portfoio/rvo.jpg" alt=""></a>
                     <div class="caption">
-                        <h3>ノバルティスファーマ　網膜静脈閉塞症ドットコム</h3>
-                        <dl>
-                            <dt>【担当】</dt>
-                            <dd>ページコーディング</dd>
-                        </dl>
+                        <h4>ノバルティスファーマ　網膜静脈閉塞症ドットコム</h4>
+                            <h5>【担当】</h5>
+                            <ul>
+                            <li>ページコーディング</li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -156,11 +156,11 @@
                 <div class="thumbnail">
                     <a href="http://www.mcnv-eye.com/"><img src="../assets/images/portfoio/mcnv.jpg" alt=""></a>
                     <div class="caption">
-                        <h3>ノバルティスファーマ　強度近視ドットコム</h3>
-                        <dl>
-                            <dt>【担当】</dt>
-                            <dd>ページコーディング</dd>
-                        </dl>
+                        <h4>ノバルティスファーマ　強度近視ドットコム</h4>
+                            <h5>【担当】</h5>
+                            <ul>
+                            <li>ページコーディング</li>
+                        </ul>
                     </div>
                 </div>
             </div>
