--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -24,6 +24,12 @@
     <meta property="og:title" content="Home" />
     <meta property="og:image" content="http://rsuke.github.io/assets/images/ogp.png" />
 
+    <style>
+    .thumbnail{
+        height: 490px;
+    }
+    </style>
+
 </head>
 <body class="home-template">
 
@@ -48,7 +54,7 @@
                         <ul>
                             <li>テンプレート設計</li>
                             <li>CSS設計</li>
-                            <li><Javascript</li>
+                            <li>Javascript</li>
                         </ul>
                     </div>
                 </div>
