--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -44,7 +44,34 @@
 <main class="content" role="main">
 
     <div class="container">
-        <div class="row">
+                <div class="row">
+            <div class="col-md-4">
+                <div class="thumbnail">
+                    <a href="http://www.rakuten-bank.co.jp/smartphone/"><img src="../assets/images/portfoio/omgt.png" alt=""></a>
+                    <div class="caption">
+                        <h4>Oh My Glasses TOKYO</h4>
+                        <h5>【担当】</h5>
+                        <ul>
+                            <li>ECサイトディレクション</li>
+                            <li>ページ改修、新規作成（HTML、Haml）</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="thumbnail">
+                    <a href="http://www.eikoh-seminar.com/"><img src="../assets/images/portfoio/eikoh.jpg" alt=""></a>
+                    <div class="caption">
+                        <h4>ディズニーストア</h4>
+                            <h5>【担当】</h5>
+                            <ul>
+                            <li>テンプレート設計</li>
+                            <li>CSS設計</li>
+                            <li>Javascript</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
             <div class="col-md-4">
                 <div class="thumbnail">
                     <a href="http://www.rakuten-bank.co.jp/smartphone/"><img src="../assets/images/portfoio/rkbk.png" alt=""></a>
@@ -59,6 +86,9 @@
                     </div>
                 </div>
             </div>
+        </div>
+
+        <div class="row">
             <div class="col-md-4">
                 <div class="thumbnail">
                     <a href="http://www.eikoh-seminar.com/"><img src="../assets/images/portfoio/eikoh.jpg" alt=""></a>
@@ -86,9 +116,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-
-        <div class="row">
             <div class="col-md-4">
                 <div class="thumbnail">
                     <a href="http://www.minit.co.jp/"><img src="../assets/images/portfoio/minit.jpg" alt=""></a>
@@ -103,6 +130,10 @@
                     </div>
                 </div>
             </div>
+        </div>
+
+        <div class="row">
+
             <div class="col-md-4">
                 <div class="thumbnail">
                     <a href="http://www.kinenhin-a.com/"><img src="../assets/images/portfoio/kinen.jpg" alt=""></a>
@@ -129,23 +160,23 @@
                     </div>
                 </div>
             </div>
-
-        </div>
-
-        <div class="row">
             <div class="col-md-4">
                 <div class="thumbnail">
                     <a href="http://qvc.jp/smp/cont/smp/top/Main"><img src="../assets/images/portfoio/qvc.png" alt=""></a>
                     <div class="caption">
                         <h4>QVCスマートフォンサイト</h4>
                             <h5>【担当】</h5>
-<ul>
+                        <ul>
                             <li>テンプレート設計</li>
                             <li>CSS設計</li>
                         </ul>
                     </div>
                 </div>
             </div>
+        </div>
+
+        <div class="row">
+
             <div class="col-md-4">
                 <div class="thumbnail">
                     <a href="http://www.rvo-eye.com/"><img src="../assets/images/portfoio/rvo.jpg" alt=""></a>
@@ -172,8 +203,7 @@
             </div>
         </div>
 
-        <p>その他、ここには表示できないですが、WebサービスやiPhoneアプリなどの画面のフロント周りの実装を行ってきました。<br>
-        現在は、大手ショッピングサイトのECサイト（レスポンシブ）を作成中です（9月1日公開予定）</p>
+        <p>その他、ここには表示できないですが、WebサービスやiPhoneアプリなどの画面のフロント周りの実装を行ってきました。</p>
     </div>
 
 
