--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -47,7 +47,7 @@
                 <div class="row">
             <div class="col-md-4">
                 <div class="thumbnail">
-                    <a href="http://www.rakuten-bank.co.jp/smartphone/"><img src="../assets/images/portfoio/omgt.png" alt=""></a>
+                    <a href="https://www.ohmyglasses.jp/" target="_blank"><img src="../assets/images/portfoio/omgt.png" alt=""></a>
                     <div class="caption">
                         <h4>Oh My Glasses TOKYO</h4>
                         <h5>【担当】</h5>
@@ -60,7 +60,7 @@
             </div>
             <div class="col-md-4">
                 <div class="thumbnail">
-                    <a href="http://www.eikoh-seminar.com/"><img src="../assets/images/portfoio/eikoh.jpg" alt=""></a>
+                    <a href="http://store.disney.co.jp/" target="_blank"><img src="../assets/images/portfoio/dsore.jpg" alt=""></a>
                     <div class="caption">
                         <h4>ディズニーストア</h4>
                             <h5>【担当】</h5>
@@ -74,7 +74,7 @@
             </div>
             <div class="col-md-4">
                 <div class="thumbnail">
-                    <a href="http://www.rakuten-bank.co.jp/smartphone/"><img src="../assets/images/portfoio/rkbk.png" alt=""></a>
+                    <a href="http://www.rakuten-bank.co.jp/smartphone/" target="_blank"><img src="../assets/images/portfoio/rkbk.png" alt=""></a>
                     <div class="caption">
                         <h4>楽天銀行スマートフォンサイト</h4>
                         <h5>【担当】</h5>
@@ -91,7 +91,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="thumbnail">
-                    <a href="http://www.eikoh-seminar.com/"><img src="../assets/images/portfoio/eikoh.jpg" alt=""></a>
+                    <a href="http://www.eikoh-seminar.com/" target="_blank"><img src="../assets/images/portfoio/eikoh.jpg" alt=""></a>
                     <div class="caption">
                         <h4>栄光ゼミナール</h4>
                             <h5>【担当】</h5>
@@ -105,7 +105,7 @@
             </div>
             <div class="col-md-4">
                 <div class="thumbnail">
-                    <a href="http://www.enherb.jp/news/141028.html."><img src="../assets/images/portfoio/enherb.png" alt=""></a>
+                    <a href="http://www.enherb.jp/news/141028.html" target="_blank"><img src="../assets/images/portfoio/enherb.png" alt=""></a>
                     <div class="caption">
                         <h4>まいにちハーブ（iPhone、Androidアプリ）</h4>
                             <h5>【担当】</h5>
@@ -118,7 +118,7 @@
             </div>
             <div class="col-md-4">
                 <div class="thumbnail">
-                    <a href="http://www.minit.co.jp/"><img src="../assets/images/portfoio/minit.jpg" alt=""></a>
+                    <a href="http://www.minit.co.jp/" target="_blank"><img src="../assets/images/portfoio/minit.jpg" alt=""></a>
                     <div class="caption">
                         <h4>ミスターミニット</h4>
                             <h5>【担当】</h5>
@@ -136,7 +136,7 @@
 
             <div class="col-md-4">
                 <div class="thumbnail">
-                    <a href="http://www.kinenhin-a.com/"><img src="../assets/images/portfoio/kinen.jpg" alt=""></a>
+                    <a href="http://www.kinenhin-a.com/" target="_blank"><img src="../assets/images/portfoio/kinen.jpg" alt=""></a>
                     <div class="caption">
                         <h4>記念品コンシェル</h4>
                             <h5>【担当】</h5>
@@ -149,7 +149,7 @@
             </div>
             <div class="col-md-4">
                 <div class="thumbnail">
-                    <a href="http://www.ot-c.jp/"><img src="../assets/images/portfoio/t.jpg" alt=""></a>
+                    <a href="http://www.ot-c.jp/" target="_blank"><img src="../assets/images/portfoio/t.jpg" alt=""></a>
                     <div class="caption">
                         <h4>Tシャツクラブ</h4>
                             <h5>【担当】</h5>
@@ -162,7 +162,7 @@
             </div>
             <div class="col-md-4">
                 <div class="thumbnail">
-                    <a href="http://qvc.jp/smp/cont/smp/top/Main"><img src="../assets/images/portfoio/qvc.png" alt=""></a>
+                    <a href="http://qvc.jp/smp/cont/smp/top/Main" target="_blank"><img src="../assets/images/portfoio/qvc.png" alt=""></a>
                     <div class="caption">
                         <h4>QVCスマートフォンサイト</h4>
                             <h5>【担当】</h5>
@@ -179,7 +179,7 @@
 
             <div class="col-md-4">
                 <div class="thumbnail">
-                    <a href="http://www.rvo-eye.com/"><img src="../assets/images/portfoio/rvo.jpg" alt=""></a>
+                    <a href="http://www.rvo-eye.com/" target="_blank"><img src="../assets/images/portfoio/rvo.jpg" alt=""></a>
                     <div class="caption">
                         <h4>ノバルティスファーマ　網膜静脈閉塞症ドットコム</h4>
                             <h5>【担当】</h5>
@@ -191,7 +191,7 @@
             </div>
             <div class="col-md-4">
                 <div class="thumbnail">
-                    <a href="http://www.mcnv-eye.com/"><img src="../assets/images/portfoio/mcnv.jpg" alt=""></a>
+                    <a href="http://www.mcnv-eye.com/" target="_blank"><img src="../assets/images/portfoio/mcnv.jpg" alt=""></a>
                     <div class="caption">
                         <h4>ノバルティスファーマ　強度近視ドットコム</h4>
                             <h5>【担当】</h5>
