--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -89,7 +89,7 @@
         </div>
 
         <div class="row">
-            <div class="col-md-4">
+            <!--<div class="col-md-4">
                 <div class="thumbnail">
                     <a href="http://www.eikoh-seminar.com/" target="_blank"><img src="../assets/images/portfoio/eikoh.jpg" alt=""></a>
                     <div class="caption">
@@ -102,7 +102,7 @@
                         </ul>
                     </div>
                 </div>
-            </div>
+            </div>-->
             <div class="col-md-4">
                 <div class="thumbnail">
                     <a href="http://www.enherb.jp/news/141028.html" target="_blank"><img src="../assets/images/portfoio/enherb.png" alt=""></a>
@@ -131,9 +131,6 @@
                 </div>
             </div>
         </div>
-
-        <div class="row">
-
             <div class="col-md-4">
                 <div class="thumbnail">
                     <a href="http://www.kinenhin-a.com/" target="_blank"><img src="../assets/images/portfoio/kinen.jpg" alt=""></a>
@@ -147,6 +144,9 @@
                     </div>
                 </div>
             </div>
+        <div class="row">
+
+
             <div class="col-md-4">
                 <div class="thumbnail">
                     <a href="http://www.ot-c.jp/" target="_blank"><img src="../assets/images/portfoio/t.jpg" alt=""></a>
@@ -174,9 +174,6 @@
                 </div>
             </div>
         </div>
-
-        <div class="row">
-
             <div class="col-md-4">
                 <div class="thumbnail">
                     <a href="http://www.rvo-eye.com/" target="_blank"><img src="../assets/images/portfoio/rvo.jpg" alt=""></a>
@@ -189,6 +186,9 @@
                     </div>
                 </div>
             </div>
+        <div class="row">
+
+
             <div class="col-md-4">
                 <div class="thumbnail">
                     <a href="http://www.mcnv-eye.com/" target="_blank"><img src="../assets/images/portfoio/mcnv.jpg" alt=""></a>
