--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -60,7 +60,7 @@
             </div>
             <div class="col-md-4">
                 <div class="thumbnail">
-                    <a href="http://store.disney.co.jp/" target="_blank"><img src="../assets/images/portfoio/dsore.jpg" alt=""></a>
+                    <a href="http://store.disney.co.jp/" target="_blank"><img src="../assets/images/portfoio/dsore.png" alt=""></a>
                     <div class="caption">
                         <h4>ディズニーストア</h4>
                             <h5>【担当】</h5>
@@ -130,7 +130,6 @@
                     </div>
                 </div>
             </div>
-        </div>
             <div class="col-md-4">
                 <div class="thumbnail">
                     <a href="http://www.kinenhin-a.com/" target="_blank"><img src="../assets/images/portfoio/kinen.jpg" alt=""></a>
@@ -144,6 +143,8 @@
                     </div>
                 </div>
             </div>
+        </div>
+
         <div class="row">
 
 
@@ -173,7 +174,6 @@
                     </div>
                 </div>
             </div>
-        </div>
             <div class="col-md-4">
                 <div class="thumbnail">
                     <a href="http://www.rvo-eye.com/" target="_blank"><img src="../assets/images/portfoio/rvo.jpg" alt=""></a>
@@ -186,6 +186,8 @@
                     </div>
                 </div>
             </div>
+        </div>
+
         <div class="row">
 
 
