リンク削除

--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -105,7 +105,7 @@
             </div>-->
             <div class="col-md-4">
                 <div class="thumbnail">
-                    <a href="http://www.enherb.jp/news/141028.html" target="_blank"><img src="../assets/images/portfoio/enherb.png" alt=""></a>
+                    <img src="../assets/images/portfoio/enherb.png" alt="">
                     <div class="caption">
                         <h4>まいにちハーブ（iPhone、Androidアプリ）</h4>
                             <h5>【担当】</h5>
